// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package openconfig.testing;

import "github.com/openconfig/ondatra/proto/testbed.proto";

option go_package = "github.com/openconfig/featureprofiles/topologies/proto/binding";

// A binding configuration.
message Binding {
  repeated Device duts = 1;
  repeated Device ates = 2;

  // Dial options across all devices, unless overridden by the device.
  Options options = 3;
}

// Config for resetting the device before the test run.
message Configs {
  // Raw device config
  repeated bytes cli = 1;

  // Path to file containing raw device config
  repeated string cli_file = 2;

  // Path to a file containing gNMI SetRequest as text-formatted proto.
  repeated string gnmi_set_file = 3;

  // Whether to flush gRIBI.  If true, this will send a FlushRequest for all
  // network instances and overriding the election ID.
  bool gribi_flush = 4;
}

// A device binding.
message Device {
  // Device ID as it appears in the testbed.
  string id = 1;

  // The actual device hostname to be used for the binding.
  string name = 2;

  // Dial options across all protocols of this device, unless
  // overrideen by individual protocols.
  Options options = 3;

  // Port bindings for this device.
  repeated Port ports = 4;

  // Configs to apply to device after binding
  Configs config = 5;

  // Dial options for SSH (DUT only).
  Options ssh = 11;

  // Dial options for gNMI (DUT only).
  Options gnmi = 12;

  // Dial options for gNOI (DUT only).
  Options gnoi = 13;

  // Dial options for gNSI (DUT only).
  Options gnsi = 14;

  // Dial options for gRIBI (DUT only).
  Options gribi = 15;

  // Dial options for P4RT (DUT only).
  Options p4rt = 16;

  // Dial options for IxNetwork (ATE only).
  Options ixnetwork = 17;

  // Dial options for OTG Ixia-C (HW Only).
  Options otg = 18;

  // Vendor of the device.
  ondatra.Device.Vendor vendor = 19;

  // Hardware models of the device.
  string hardware_model = 20;

  // Software version of the device.
  string software_version = 21;
}

// Dial options.
message Options {
  // This is the dial target, typically formatted as "hostname:port".
  // If not set, it will use the device name and the default port for
  // the protocol.
  string target = 1;

  // Use plain HTTP/2 and omit TLS (gRPC only).
  bool insecure = 2;

  // When using TLS, skip certificate verification (gRPC and HTTP).
  bool skip_verify = 3;

  // The username for authentication.
  string username = 4;

  // The password for authentication.
  string password = 5;

  // The session_id for ATE REST API session id
  int32 session_id = 6;

  // gRPC request timeout (second)
  int32 timeout = 7;

  // gRPC dial option to set the maximum recv message size in bytes.
  int32 max_recv_msg_size = 8;
}

// Port binding.
message Port {
  // Port ID as it appears in the testbed.
  string id = 1;

  // The actual port name to be used for the binding.
  string name = 2;
}
